# ferricstore-python

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  docker-compose.cluster.yml  docker-compose.security.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  extended-validation.yml  publish.yml  security.yml
docs/: adapters.md  async.md  benchmark.md  children.md  client.md  codecs.md  compare.md  concepts.md  configuration.md  data.md  governance.md  index.md  local-development.md  native.md  patterns.md  production.md  protocol-benchmark-history.md  protocol.md  quickstart.md  release.md  retry.md  sdk.md  security.md  status.md  testing.md  troubleshooting.md  use-cases.md  web.md  worker.md  workflow.md
examples/: async_queue_benchmark.py  async_queue_worker.py  async_state_machine_workflow_benchmark.py  dbos_style_benchmark.py  order_workflow.py  protocol_commands.py  protocol_dbos_benchmark.py  protocol_flow_commands_benchmark.py  protocol_flow_read_benchmark.py  protocol_kv_benchmark.py  protocol_restate_latency_benchmark.py  protocol_trace_latency.py  queue_worker.py  run_optimized_flow_benchmarks.py  state_machine_workflow.py  state_machine_workflow_benchmark.py
scripts/: check_critical_coverage.py  check_release_version.py  soak_sdk.py  wait_for_ferricstore.py
src/ferricstore/: __init__.py  adapters.py  async_client.py  async_client_claims.py  async_client_core.py  async_client_effects.py  async_client_governance.py  async_client_management.py  async_client_mutations.py  async_client_producer.py  async_client_queries.py  async_client_schedules.py  async_client_sessions.py  async_client_state.py  async_client_support.py  async_commands.py  async_ownership.py  async_partitioning.py  async_producer.py  async_queue_api.py  async_queue_producer.py  async_queue_runtime.py  async_wake.py  async_worker.py  async_worker_completion.py  async_workflow_budget.py  async_workflow_client.py  async_workflow_context.py  async_workflow_execution.py  async_workflow_producer.py  async_workflow_runtime.py  async_workflow_types.py  backpressure.py  batch_core.py  client.py  client_autobatch.py  client_autobatch_dispatch.py  client_autobatch_queue.py  client_claim_options.py  client_claims.py  (+115 more)
tests/: __init__.py  flow_query_contract.py  test_async_client.py  test_async_queue_benchmark.py  test_async_sdk.py  test_async_state_machine_benchmark.py  test_backpressure_regressions.py  test_batch_core.py  test_client.py  test_dbos_style_benchmark.py  test_flow_payload_parsing.py  test_flow_worker_scheduler.py  test_lifecycle_regressions.py  test_module_architecture.py  test_native.py  test_pool_concurrency_stress.py  test_protocol.py  test_protocol_dbos_benchmark.py  test_protocol_flow_commands_benchmark.py  test_protocol_flow_read_benchmark.py  test_protocol_kv_benchmark.py  test_protocol_properties.py  test_protocol_regressions.py  test_protocol_restate_latency_benchmark.py  test_public_api.py  test_release_contracts.py  test_review_iteration_10_regressions.py  test_review_iteration_2_regressions.py  test_review_iteration_3_regressions.py  test_review_iteration_4_regressions.py  test_review_iteration_5_regressions.py  test_review_iteration_6_regressions.py  test_review_iteration_7_regressions.py  test_review_iteration_8_regressions.py  test_review_iteration_9_regressions.py  test_review_iteration_regressions.py  test_state_machine_workflow_benchmark.py  test_v010_query_contract.py  test_v080_contract.py  test_v091_policy_contract.py  (+3 more)
tests/compatibility/: test_server_compatibility.py
tests/integration/: test_cluster_failover_integration.py  test_ferricstore_integration.py  test_recovery_integration.py  test_security_integration.py
tools/: generate_async_commands.py
