[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ferricstore"
version = "0.1.0"
description = "Python SDK for FerricStore and FerricFlow"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "FerricStore" }]
keywords = [
  "durable-execution",
  "ferricflow",
  "ferricstore",
  "queue",
  "redis",
  "workflow",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]
dependencies = [
  "hiredis>=2.3,<4",
  "redis>=5,<7",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<9",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/ferricstore/ferricstore-python"
Repository = "https://github.com/ferricstore/ferricstore-python"
Issues = "https://github.com/ferricstore/ferricstore-python/issues"
Documentation = "https://github.com/ferricstore/ferricstore-python/tree/main/docs"
Changelog = "https://github.com/ferricstore/ferricstore-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ferricstore"]

[tool.hatch.build.targets.wheel.force-include]
"src/ferricstore/py.typed" = "ferricstore/py.typed"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["ferricstore"]
