[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ferricstore"
version = "0.1.1"
description = "Python SDK for FerricStore and FerricFlow"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "FerricStore" }]
keywords = [
  "durable-execution",
  "ferricflow",
  "ferricstore",
  "queue",
  "redis",
  "workflow",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]
dependencies = [
  "hiredis>=2.3,<4",
  "redis>=5,<7",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.8,<2",
  "build>=1.2,<2",
  "pip-audit>=2.9,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.15,<1",
  "mypy>=1.11",
  "twine>=6,<7",
]

[project.urls]
Homepage = "https://github.com/ferricstore/ferricstore-python"
Repository = "https://github.com/ferricstore/ferricstore-python"
Issues = "https://github.com/ferricstore/ferricstore-python/issues"
Documentation = "https://github.com/ferricstore/ferricstore-python/tree/main/docs"
Changelog = "https://github.com/ferricstore/ferricstore-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ferricstore"]

[tool.hatch.build.targets.wheel.force-include]
"src/ferricstore/py.typed" = "ferricstore/py.typed"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "ASYNC",
  "B",
  "C4",
  "E",
  "F",
  "I",
  "PERF",
  "PIE",
  "PTH",
  "RUF",
  "SIM",
  "T20",
  "UP",
]
ignore = [
  "PERF203",
]

[tool.ruff.lint.per-file-ignores]
"examples/**/*.py" = ["ASYNC110", "PERF401", "T20"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["ferricstore"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["ferricstore"]

[tool.coverage.report]
fail_under = 72.8
show_missing = true
skip_covered = false

[tool.bandit]
exclude_dirs = [".venv", "build", "dist"]
skips = ["B101"]
